// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ButtonOLD Button 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <input
          disabled={false}
          id={null}
          onClick={[Function]}
          type="button"
          value="Save as draft"
        />
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <input
          disabled={true}
          id={null}
          onClick={[Function]}
          type="button"
          value="Delete"
        />
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled Submit 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <input
          disabled={true}
          id={null}
          onClick={null}
          type="submit"
          value="Delete"
        />
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Disabled Warning 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <input
          className="warning"
          disabled={true}
          id={null}
          onClick={null}
          type="submit"
          value="Delete"
        />
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Link 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <a
          className="button"
          href="#"
          id={null}
        >
          Continue
        </a>
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Secondary 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <input
          className="secondary"
          disabled={false}
          id={null}
          onClick={null}
          type="submit"
          value="Save as draft"
        />
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Standard 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <input
          disabled={false}
          id={null}
          onClick={null}
          type="button"
          value="Save as draft"
        />
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Start 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <a
          className="button start"
          href="#"
          id={null}
        >
          Start now &gt;
        </a>
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Submit 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <input
          disabled={false}
          id={null}
          onClick={null}
          type="submit"
          value="Save and continue"
        />
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/ButtonOLD Warning 1`] = `
<div
  className="false "
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <div
    id="middle"
  >
    <div
      className="inner"
    >
      <main
        id="content"
      >
        <input
          className="warning"
          disabled={false}
          id={null}
          onClick={null}
          type="submit"
          value="Delete"
        />
      </main>
    </div>
  </div>
</div>
`;
